--- a/style.css
+++ b/style.css
@@ -21,13 +21,34 @@ canvas {
 }
 
 .game-container {
-  background-color: #3d3d3d;
   display: flex;
   justify-content: center;
+}
+
+.bg {
+  background-color: #262626;
+  width: 100%;
+  height: 100%;
 }
 
 i {
   position: absolute;
   z-index: 30;
   color: red;
+}
+
+.github {
+  display: flex;
+  position: absolute;
+  top: 72px;
+  right: 121px;
+  z-index: 5;
+}
+
+.linkedin {
+  display: flex;
+  position: absolute;
+  top: 75px;
+  left: 135px;
+  z-index: 5;
 }
