--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	min-height: 100%;
 }
 ol, ul {
 	list-style: none;
@@ -81,6 +82,7 @@ canvas {
   background-color: #111111;
   width: 100%;
   height: 100%;
+	overflow: scroll;
 }
 
 i {
@@ -118,8 +120,8 @@ i {
 	position: absolute;
 	margin-top: 250px;
 	left: 480px;
-	color: #FF7F00;
-	font-family: Helvetica, sans-serif;
+	color: red;
+	font-family:'Press Start 2P',cursive;
 	cursor: default;
 	z-index: 4;
 }
